add dealer page

--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,11 @@ code {
     }
   }
 }
+
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
