--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,6 @@ code {
 }
 
 .rdt_TableRow {
-  font-weight: 700  !important;
   color: #727378 !important;
 }
 
@@ -66,6 +65,7 @@ code {
   background: #333 !important;
   color: #F6F5F1 !important;
   border-radius: 17px;
+  width: 78% !important;
 }
 
 .rdt_Pagination svg {
