--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @tailwind utilities;
 
 body {
+  font-family:  'Gilroy', sans-serif;;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
