edit modal text

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,9 @@ body {
   font-family: 'Gilroy-Thin';
   font-weight: 100;
 }
-
+.dYHiBl {
+  padding:0px !important;
+}
 .font-Regular {
   font-family: 'Gilroy-Regular';
   font-weight: 400;
