--- a/src/index.css
+++ b/src/index.css
@@ -243,7 +243,7 @@ a:focus {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #dfdfdf;
+  background: #cfcfcf;
   border-radius: 5px;
 }
 
