--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.dealer-detail .rdt_TableCol ,.dealer-detail .rdt_TableBody .rdt_TableCell{
-  font-size: 11px !important;
+.dealer-detail .rdt_TableCol {
+font-size: 11px !important;
+  font-family: 'Gilroy-Bold' !important;
 }
-
+.dealer-detail .rdt_TableBody .rdt_TableCell{
+  font-size: 11px !important;
+  font-family: 'Gilroy-Regular' !important;
+}
 .font-light {
   font-family: 'Gilroy-Light';
   font-weight: 300;
