--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,11 @@ body {
 .dealer-detail .rdt_TableCol {
 font-size: 11px !important;
   /* font-family: 'Gilroy-Bold' !important; */
+  font-weight: 700;
 }
 .dealer-detail .rdt_TableBody .rdt_TableCell{
   font-size: 11px !important;
+  font-weight: 400;
   /* font-family: 'Gilroy-Regular' !important; */
 }
 /* .font-light {
