--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,6 @@
   border-image-slice: 1;
 }
 
-.css-1mplhyi-control:hover {
-  border-color:#f9f9f9 !important;
+.css-b62m3t-container div:hover {
+  border-color: #80808085 !important;
 }
