--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   transform: translateY(-1.25rem) scale(0.75);
   color: #4a90e2; /* Change the color to match your design */
 }
+
+.rdrInputRange {
+  display: none !important;
+}
+
 .SearchSelect.css-b62m3t-container {
   font-size: 16px !important;
   color: #111827 !important;
