--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,29 @@
   margin: 3px;
   border-radius: 3px;
 }
+.SearchSelect:focus {
+  outline: none;
+  box-shadow: none;
+}
 
+.\!w-full.SearchSelect.filter.css-b62m3t-container div {
+  padding: 2px 4px;
+}
+.dropdown-container {
+  border-radius: 9px !important;
+}
+.rmsc .dropdown-container:focus-within {
+  box-shadow: none !important;
+  border-color: #80808085 !important;
+}
+.rmsc .gray {
+  color: #808080 !important;
+}
+.rmsc {
+   --rmsc-main: #808080 !important;
+  box-sizing: unset !important;
+  --tw-ring-color: #80808085 !important;
+}
 .SearchSelect.css-b62m3t-container {
   font-size: 16px !important;
   color: #111827 !important;
