--- a/src/index.css
+++ b/src/index.css
@@ -259,3 +259,28 @@ a:focus {
   padding-bottom: 10px;
   flex-wrap: wrap;
 }
+
+@-moz-document url-prefix() {
+
+  html,
+  .overflow-y-auto,
+  .appearance-none.peer {
+    overflow-y: scroll;
+    scrollbar-color: #f1f1f1 #cfcfcf #dfdfdf;
+    scrollbar-width: thin;
+  }
+
+  select {
+    background: white !important;
+  }
+
+  input[type=number]::-webkit-outer-spin-button,
+  input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type=number] {
+    -moz-appearance: textfield;
+  }
+}
