--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,25 @@
-
+@-moz-document url-prefix() {
+  .rounded-full.text-white.absolute {
+    top: 7px !important;
+    right: -33px !important;
+  }
+}
 
 .transforms {
-    transform: translate(-50%, -6%);
+  transform: translate(-50%, -6%);
 }
 
 .focused label,
 .react-select__control--is-focused label {
   transform: translateY(-1.25rem) scale(0.75);
-  color: #4a90e2; /* Change the color to match your design */
+  color: #4a90e2;
+  /* Change the color to match your design */
 }
 
 .rdrInputRange {
   display: none !important;
 }
+
 .tag-invalid {
   background-color: red;
   color: white;
@@ -28,6 +35,7 @@
   margin: 3px;
   border-radius: 3px;
 }
+
 .SearchSelect:focus {
   outline: none;
   box-shadow: none;
@@ -36,36 +44,44 @@
 .\!w-full.SearchSelect.filter.css-b62m3t-container div {
   padding: 2px 4px;
 }
+
 .dropdown-container {
   border-radius: 9px !important;
 }
+
 .rmsc .dropdown-container:focus-within {
   box-shadow: none !important;
   border-color: #80808085 !important;
 }
+
 .rmsc .gray {
   color: #333 !important;
 }
+
 .rmsc {
-   --rmsc-main: #808080 !important;
+  --rmsc-main: #808080 !important;
   box-sizing: unset !important;
   --tw-ring-color: #80808085 !important;
 }
+
 .SearchSelect.css-b62m3t-container {
   font-size: 16px !important;
   color: #111827 !important;
   font-weight: 600;
 }
+
 .red .dropdown-container {
   border-width: 0px !important;
-  
+
 }
+
 button.react-multiple-carousel__arrow.react-multiple-carousel__arrow--left {
   right: -20px;
   min-width: 30px !important;
   left: unset;
   min-height: 30px !important;
 }
+
 button.react-multiple-carousel__arrow.react-multiple-carousel__arrow--right {
   right: -20px !important;
   min-width: 30px !important;
@@ -78,6 +94,7 @@ button.react-multiple-carousel__arrow.react-multiple-carousel__arrow--right {
   left: unset;
   min-height: 30px !important;
 }
+
 .reseller button.react-multiple-carousel__arrow.react-multiple-carousel__arrow--right {
   right: 10px !important;
   min-width: 30px !important;
@@ -89,7 +106,8 @@ button.react-multiple-carousel__arrow.react-multiple-carousel__arrow--right {
 }
 
 .gradient-border {
-  border-image: linear-gradient(to right, #FFFFFF00, #AAAAAA, #FFFFFF00); /* Adjust colors as needed */
+  border-image: linear-gradient(to right, #FFFFFF00, #AAAAAA, #FFFFFF00);
+  /* Adjust colors as needed */
   border-image-slice: 1;
 }
 
@@ -103,6 +121,7 @@ button.react-multiple-carousel__arrow.react-multiple-carousel__arrow--right {
   background: #dedddd !important;
 }
 
-.koyZDM , .bsLmP {
+.koyZDM,
+.bsLmP {
   overflow: unset !important;
 }
