--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.img-filter {
+  filter: invert(0.5) sepia(1) saturate(5) hue-rotate(180deg);
+}
+
 .dealer-detail .rdt_TableCol {
   font-size: 11px !important;
   font-weight: 700;
@@ -254,4 +258,29 @@ a:focus {
   padding-top: 10px;
   padding-bottom: 10px;
   flex-wrap: wrap;
+}
+
+@-moz-document url-prefix() {
+
+  html,
+  .overflow-y-auto,
+  .appearance-none.peer {
+    overflow-y: scroll;
+    scrollbar-color: #f1f1f1 #cfcfcf #dfdfdf;
+    scrollbar-width: thin;
+  }
+
+  select {
+    background: white !important;
+  }
+
+  input[type=number]::-webkit-outer-spin-button,
+  input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type=number] {
+    -moz-appearance: textfield;
+  }
 }
