--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,8 @@ body {
   filter: invert(0.5) sepia(1) saturate(5) hue-rotate(180deg);
 }
 
-.mYSul {
+.mYSul,
+.rdt_Table {
   background-color: transparent !important;
 }
 
